ajuste swagger e paramentro
